# llm_log_parser

./: CLAUDE.md  Makefile  README.md  README.zh-TW.md  pyproject.toml
docs/superpowers/plans/: 2026-07-21-drain3-tsv-output.md
docs/superpowers/specs/: 2026-07-20-remove-runtime-tiktoken-design.md  2026-07-21-drain3-tsv-output-design.md
examples/: compress_pod_logs.py
src/llmlogs/: __init__.py  cli.py  compare.py  digest.py  models.py  pipeline.py  tokens.py
src/llmlogs/compressors/: __init__.py  base.py  drain3_compressor.py  logzip_compressor.py  masks.py
src/logcmp/: __init__.py  cli.py  compare.py  models.py  pipeline.py
src/logcmp/compressors/: __init__.py  base.py  drain3_compressor.py  logzip_compressor.py
tests/: conftest.py  drain3_csv.py  drain3_tsv.py  test_cli.py  test_compare.py  test_compressors.py  test_digest.py  test_masks.py  test_models.py  test_pipeline.py  test_tokens.py
tests/fixtures/: sample_pod_logs.json
