[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llmlogs"
version = "0.1.0"
description = "Token-efficient Kubernetes pod log compression for LLMs (logzip + drain3)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "llmlogs contributors" }]
keywords = ["logs", "compression", "kubernetes", "llm", "drain3", "logzip"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: System :: Logging",
]
dependencies = [
  "drain3-improved>=0.10.0",
  "logzip>=2.2.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.1",
  "flake8>=7.1",
  "Flake8-pyproject>=1.2",
  "isort>=5.13",
  "mypy>=1.14",
  "pylint>=3.3",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "tiktoken>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llmlogs"]

[tool.hatch.build.targets.sdist]
include = ["src/llmlogs", "tests", "README.md", "LICENSE"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
known_first_party = ["llmlogs"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]  # black-compatible (slice whitespace)
exclude = [".venv", "build", "dist", ".git"]

[tool.pylint.main]
jobs = 0
py-version = "3.10"
source-roots = ["src"]
ignore-paths = [".venv", "build", "dist"]

[tool.pylint.messages_control]
# Only globally disable checks the community treats as too strict by default.
# Everything else: fix the code, or `# pylint: disable=...` at the call site.
disable = [
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring
  "R0903",  # too-few-public-methods (data holders / Protocol stubs)
  "W0511",  # fixme
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
mypy_path = "src"
packages = ["llmlogs"]

[[tool.mypy.overrides]]
module = ["logzip", "logzip.*", "drain3", "drain3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["llmlogs"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
